--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "googleapis": "^148.0.0",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.66.0"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10"
   }
 }
