--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node bot.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "fly deploy -a birthday-bot-small-star-4950",
+    "deploy-log": "fly logs -a birthday-bot-small-star-4950"
   },
   "keywords": [],
   "author": "",
