--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -1,18 +1,28 @@
-# See https://fly.io/docs/app-guides/continuous-deployment-with-github-actions/
+# .github/workflows/fly-deploy.yml
+#
+# GitHub Actions → Fly.io CI-CD
 
 name: Fly Deploy
+
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+
 jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
-    concurrency: deploy-group    # optional: ensure only one action runs at a time
+    concurrency: deploy-group
+
+    env:
+      FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+
     steps:
       - uses: actions/checkout@v4
+
+      # ставим flyctl
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+
+      # деплой
+      - name: Deploy to Fly.io
+        run: flyctl deploy --remote-only
