--- a/fly.toml
+++ b/fly.toml
@@ -1,13 +1,28 @@
+# fly.toml ─ конфигурация вашего бота
 app            = "birthday-bot-small-star-4950"
-primary_region = "otp"
+primary_region = "otp"      # Bucarest
 
+# ────────────────────────────────────────
+#  Build-секция можно оставить пустой – Fly
+#  сам найдёт Dockerfile или Nixpacks.
+[build]
+
+# ────────────────────────────────────────
+#  Единственный процесс (группа «app» по
+#  умолчанию).  Указывать «bot» смысла нет –
+#  CLI >0.3.100 уже не принимает --process-group.
 [processes]
-bot = "node bot.js"
+app = "node bot.js"
 
+# ────────────────────────────────────────
+#  Настройки выката.  ha=false → запускаем
+#  ровно одну машину (без дублирования).
 [deploy]
-ha = false
+ha = false          # ❗️ обязательно для single-instance-бота
 
+# ────────────────────────────────────────
+#  Параметры виртуалки (хватает минималки)
 [[vm]]
-memory   = "256mb"
-cpu_kind = "shared"
-cpus     = 1
+size      = "shared-cpu-1x"  # то же самое, что 256 МБ/0.5 vCPU
+memory    = "256mb"
+cpus      = 1
