--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "fly deploy -a birthday-bot-small-star-4950",
+    "deploy": "fly deploy --remote-only",
     "deploy-log": "fly logs -a birthday-bot-small-star-4950"
   },
   "keywords": [],
